<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.udc.muei.apm.apm_smarthouse.activities.ConfiguracionServidor">

    <android.support.v7.widget.Toolbar
        android:theme="@style/AppTheme"
        android:id="@+id/configuracion_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edittext_ip_servidor"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginTop="44dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/direccion_ip"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/configuracion_toolbar"/>

    <EditText
        android:id="@+id/edittext_puerto"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/puerto_servidor"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_ip_servidor" />

    <Button
        android:id="@+id/button_save_config"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorPrimary"
        android:text="@string/save"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <Button
        android:id="@+id/button_cancel_config"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:text="@string/cancel"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_save_config"/>



</android.support.constraint.ConstraintLayout>
